[gd_scene load_steps=27 format=1]

[ext_resource path="res://scripts/marta.gd" type="Script" id=1]
[ext_resource path="res://sprites/marta_walk_0.png" type="Texture" id=2]
[ext_resource path="res://sprites/marta_walk_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/marta_walk_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/marta_walk_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/marta_walk_4.png" type="Texture" id=6]
[ext_resource path="res://sprites/marta_walk_5.png" type="Texture" id=7]
[ext_resource path="res://sprites/marta_walk_6.png" type="Texture" id=8]
[ext_resource path="res://sprites/marta_walk_7.png" type="Texture" id=9]
[ext_resource path="res://sprites/marta_tired0.png" type="Texture" id=10]
[ext_resource path="res://sprites/marta_tired1.png" type="Texture" id=11]
[ext_resource path="res://sprites/marta_watering0.png" type="Texture" id=12]
[ext_resource path="res://sprites/marta_watering1.png" type="Texture" id=13]
[ext_resource path="res://sprites/marta_watering2.png" type="Texture" id=14]
[ext_resource path="res://sprites/marta_watering3.png" type="Texture" id=15]
[ext_resource path="res://sprites/marta_watering4.png" type="Texture" id=16]
[ext_resource path="res://sprites/marta_refilling0.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

length = 0.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=4]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10 ]
}

[sub_resource type="Animation" id=5]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_anim:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="ColorRamp" id=7]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.818298, 0.954251, 0.960938, 1, 0.429054, 0.234833, 0.742188, 1 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 4.92577, 18.2687 )

[node name="marta" type="KinematicBody2D"]

transform/pos = Vector2( 113.35, 71.9564 )
transform/scale = Vector2( 1.7, 1.7 )
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="sprite_anim" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"
frame = 14
flip_h = true

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 2 )
anims/tired = SubResource( 3 )
anims/unwatering = SubResource( 4 )
anims/walk = SubResource( 5 )
anims/watering = SubResource( 6 )
playback/active = true
playback/speed = 0.9
blend_times = [  ]
autoplay = ""

[node name="tired_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 4.0
one_shot = false
autostart = false

[node name="point_water" type="Position2D" parent="."]

transform/pos = Vector2( 11.809, -8.08838 )

[node name="water_flow" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( -43.1326, -24.4271 )
z/z = 1
config/amount = 64
config/lifetime = 4.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 2.51
params/linear_velocity = 40.0
params/spin_velocity = 0.0
params/orbit_velocity = -2.28882e-05
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 7 )

[node name="marta_area" type="Area2D" parent="."]

transform/pos = Vector2( -3.18287, -0.203136 )
transform/scale = Vector2( 0.276506, 0.704093 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1.27156, 0, 0, 2.49082, 1.54796, 4.12149 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="marta_shape" type="CollisionShape2D" parent="marta_area"]

transform/pos = Vector2( 1.54796, 4.12149 )
transform/scale = Vector2( 1.27156, 2.49082 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="area_water_flow" type="Area2D" parent="."]

transform/pos = Vector2( 28.3363, -11.0101 )
transform/scale = Vector2( 0.0980214, 0.228055 )
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 2.90477, 0, 0, 1.63371, -167.793, 40.0766 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape_water_flow" type="CollisionShape2D" parent="area_water_flow"]

transform/pos = Vector2( -167.793, 40.0766 )
transform/scale = Vector2( 2.90477, 1.63371 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0


